--- a/circlesOnCircles.html
+++ b/circlesOnCircles.html
@@ -1,6 +1,6 @@
 <!-- Code copied from here: 
 https://github.com/chricloud9/CirclesOnCircles/blob/master/circlesOnCircles.html
-Classmate Chris' code
+Classmate Chris' code. Played around with it to understand it.
  -->
 
 <!DOCTYPE.html>
